Migrate to 6.1